[gd_scene load_steps=18 format=3 uid="uid://ny8idplgyu1s"]

[ext_resource type="Script" uid="uid://cpgbo42e7vse8" path="res://data/scenes_and_scripts/phoenix/true_menu.gd" id="1_mgwhk"]
[ext_resource type="Shader" uid="uid://c14ncknun6c8h" path="res://data/scenes_and_scripts/scramble/cloudscape2.gdshader" id="2_7kx3w"]
[ext_resource type="FontFile" uid="uid://dskmx2extevrw" path="res://data/fonts/times.ttf" id="3_7kx3w"]
[ext_resource type="Shader" uid="uid://dwfv7tbunsf61" path="res://data/scenes_and_scripts/scramble/scramble_client_scene.gdshader" id="4_2jwjy"]
[ext_resource type="Script" uid="uid://duvgkncbmv0dr" path="res://data/scenes_and_scripts/phoenix/main_menu_items.gd" id="4_ptjkw"]
[ext_resource type="PackedScene" uid="uid://dptsatxug1hhb" path="res://data/scenes_and_scripts/multiplayertesting/profile_picture.tscn" id="5_uueyb"]
[ext_resource type="Script" uid="uid://dx3a58ijmxoiv" path="res://data/scenes_and_scripts/phoenix/profile_scroll_container.gd" id="7_2g6dm"]
[ext_resource type="Texture2D" uid="uid://bux67bkd2teot" path="res://data/images/Icons/SwitchOnBold128x128.png" id="8_cppe5"]
[ext_resource type="Texture2D" uid="uid://lalidk0dce2g" path="res://data/images/Icons/SwitchOffBold128x128.png" id="9_mljia"]
[ext_resource type="Texture2D" uid="uid://t71ul0257vc7" path="res://data/images/noun-finger-7180936.svg" id="10_mljia"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3eet2"]
shader = ExtResource("2_7kx3w")
shader_parameter/cloud_scale = 0.5
shader_parameter/cloud_coverage = 0.1
shader_parameter/cloud_softness = 0.5
shader_parameter/octaves = 1
shader_parameter/persistence = 0.1
shader_parameter/lacunarity = 1.0
shader_parameter/sky_color = Color(0.796078, 0.87451, 1, 1)
shader_parameter/cloud_base_color = Color(0.946224, 0.891706, 0.999999, 1)
shader_parameter/cloud_highlight_color = Color(0.939758, 0.502933, 0.500312, 1)
shader_parameter/lighting_contrast = 0.183
shader_parameter/speed = 0.759
shader_parameter/perspective = 0.852
shader_parameter/horizon_line = 0.623

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2g6dm"]
shader = ExtResource("4_2jwjy")
shader_parameter/sun_color = Color(1, 0.901961, 0.501961, 1)
shader_parameter/fluctuation_speed = 1.644
shader_parameter/edge_softness = 0.46
shader_parameter/noise_intensity = 0.063

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n284u"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2jwjy"]
bg_color = Color(0, 0.00392157, 0.0352941, 0.141176)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 7
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uueyb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2g6dm"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_83fcs"]

[node name="TrueMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgwhk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hider" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_3eet2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
unique_name_in_owner = true

[node name="Sun" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_2g6dm")
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1185.0
offset_top = -847.0
offset_right = 1186.0
offset_bottom = 1292.0
grow_horizontal = 0
color = Color(1, 1, 1, 0.396078)

[node name="MainMenuItems" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_ptjkw")

[node name="PlayersOnline" type="Label" parent="CanvasLayer/MainMenuItems"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 64.0
offset_top = 2084.0
offset_right = 816.0
offset_bottom = 2189.0
theme_override_colors/font_color = Color(0.138187, 0.211115, 0.55465, 1)
theme_override_font_sizes/font_size = 71
text = "Players Online:"

[node name="MatchesRunning" type="Label" parent="CanvasLayer/MainMenuItems"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 64.0
offset_top = 2190.0
offset_right = 816.0
offset_bottom = 2295.0
theme_override_colors/font_color = Color(0.138187, 0.211115, 0.55465, 1)
theme_override_font_sizes/font_size = 71
text = "Matches Running:"

[node name="MainMenuBox" type="VBoxContainer" parent="CanvasLayer/MainMenuItems"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 86.0
offset_top = -447.0
offset_right = 752.0
offset_bottom = 447.0
grow_vertical = 2
script = ExtResource("4_ptjkw")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MainMenuItems/MainMenuBox"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_7kx3w")
theme_override_font_sizes/normal_font_size = 186
text = "wordwar."

[node name="FindGame" type="Button" parent="CanvasLayer/MainMenuItems/MainMenuBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/normal = SubResource("StyleBoxFlat_n284u")
text = "find game."
alignment = 0

[node name="Settings" type="Button" parent="CanvasLayer/MainMenuItems/MainMenuBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/normal = SubResource("StyleBoxFlat_n284u")
text = "settings."
alignment = 0

[node name="SinglePlayer" type="Button" parent="CanvasLayer/MainMenuItems/MainMenuBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/normal = SubResource("StyleBoxFlat_n284u")
text = "single player."
alignment = 0

[node name="Profile" type="Button" parent="CanvasLayer/MainMenuItems/MainMenuBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/normal = SubResource("StyleBoxFlat_n284u")
text = "profile."
alignment = 0

[node name="cjenterprises" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -74.0
offset_right = -85.0
offset_bottom = -85.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 66
text = "CJ Enterprises."

[node name="ProfileMenuItems" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_ptjkw")

[node name="BackButton" type="Button" parent="CanvasLayer/ProfileMenuItems"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -574.0
offset_top = -163.0
offset_right = 8.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxFlat_2jwjy")
text = "back to menu."

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ProfileMenuItems"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 113.0
offset_top = -411.0
offset_right = 305.0
offset_bottom = -285.0
grow_vertical = 0

[node name="level" type="Label" parent="CanvasLayer/ProfileMenuItems/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 70
text = "level:"

[node name="rank" type="Label" parent="CanvasLayer/ProfileMenuItems/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 70
text = "rank:"

[node name="wins" type="Label" parent="CanvasLayer/ProfileMenuItems/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.419608, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 70
text = "wins:"

[node name="losses" type="Label" parent="CanvasLayer/ProfileMenuItems/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.47451, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 70
text = "losses:"

[node name="matchesplayed" type="Label" parent="CanvasLayer/ProfileMenuItems/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 70
text = "matches:"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/ProfileMenuItems"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -525.0
offset_top = -925.0
offset_right = 507.0
offset_bottom = -293.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ProfileMenuItems/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ProfileMenuItems/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 110
text = "current username."
horizontal_alignment = 1

[node name="CurrentUsername" type="Label" parent="CanvasLayer/ProfileMenuItems/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 110
text = "XXXXXXXXXX"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/ProfileMenuItems/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 67

[node name="NewUsername" type="LineEdit" parent="CanvasLayer/ProfileMenuItems/VBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_uueyb")
theme_override_styles/normal = SubResource("StyleBoxFlat_2g6dm")
placeholder_text = "enter new username"
alignment = 1
caret_blink = true
caret_force_displayed = true

[node name="ChangeUsername" type="Button" parent="CanvasLayer/ProfileMenuItems/VBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxFlat_2jwjy")
text = "change username."

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/ProfileMenuItems"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.0
offset_top = -190.0
offset_right = 496.0
offset_bottom = 643.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label2" type="Label" parent="CanvasLayer/ProfileMenuItems/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 110
text = "current profile picture."
horizontal_alignment = 1

[node name="ProfilePicture" parent="CanvasLayer/ProfileMenuItems/VBoxContainer3" instance=ExtResource("5_uueyb")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="ChangeProfilePicture" type="Button" parent="CanvasLayer/ProfileMenuItems/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxFlat_2jwjy")
text = "change profile picture."

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ProfileMenuItems"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ProfileMenuItems"]
unique_name_in_owner = true
visible = false
clip_contents = false
custom_minimum_size = Vector2(0, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -767.0
offset_top = -16.0
offset_right = 729.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
script = ExtResource("7_2g6dm")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ProfileMenuItems/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 50

[node name="SettingsMenuItems" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_ptjkw")

[node name="SettingsBox" type="VBoxContainer" parent="CanvasLayer/SettingsMenuItems"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -420.5
offset_right = 918.0
offset_bottom = 420.5
grow_vertical = 2

[node name="MusicSwitch" type="CheckButton" parent="CanvasLayer/SettingsMenuItems/SettingsBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/focus = SubResource("StyleBoxEmpty_83fcs")
theme_override_icons/checked = ExtResource("8_cppe5")
theme_override_icons/unchecked = ExtResource("9_mljia")
button_pressed = true
text = "music."

[node name="SoundSwitch" type="CheckButton" parent="CanvasLayer/SettingsMenuItems/SettingsBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/focus = SubResource("StyleBoxEmpty_83fcs")
theme_override_icons/checked = ExtResource("8_cppe5")
theme_override_icons/unchecked = ExtResource("9_mljia")
button_pressed = true
text = "sound."

[node name="AutoSkipRulesSwitch" type="CheckButton" parent="CanvasLayer/SettingsMenuItems/SettingsBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/focus = SubResource("StyleBoxEmpty_83fcs")
theme_override_icons/checked = ExtResource("8_cppe5")
theme_override_icons/unchecked = ExtResource("9_mljia")
text = "auto-skip rules."

[node name="LowGraphicsSwitch" type="CheckButton" parent="CanvasLayer/SettingsMenuItems/SettingsBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/focus = SubResource("StyleBoxEmpty_83fcs")
theme_override_icons/checked = ExtResource("8_cppe5")
theme_override_icons/unchecked = ExtResource("9_mljia")
text = "low-graphics."

[node name="LogoutSwitch" type="Button" parent="CanvasLayer/SettingsMenuItems/SettingsBox"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/focus = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/hover = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/normal = SubResource("StyleBoxEmpty_83fcs")
text = "logout."
icon = ExtResource("10_mljia")
alignment = 0
expand_icon = true

[node name="ReportBugSwitch" type="Button" parent="CanvasLayer/SettingsMenuItems/SettingsBox"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 141
theme_override_styles/focus = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/hover = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_83fcs")
theme_override_styles/normal = SubResource("StyleBoxEmpty_83fcs")
text = "report bug."
icon = ExtResource("10_mljia")
alignment = 0
expand_icon = true

[node name="BackButton" type="Button" parent="CanvasLayer/SettingsMenuItems"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -574.0
offset_top = -163.0
offset_right = 8.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxFlat_2jwjy")
text = "back to menu."

[node name="Label" type="Label" parent="CanvasLayer/SettingsMenuItems"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -235.5
offset_top = 508.0
offset_right = 235.5
offset_bottom = 163.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7kx3w")
theme_override_font_sizes/font_size = 146
text = "Settings"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/MainMenuItems/MainMenuBox/FindGame" to="." method="_on_find_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuItems/MainMenuBox/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuItems/MainMenuBox/Profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="CanvasLayer/ProfileMenuItems/BackButton" to="CanvasLayer/ProfileMenuItems" method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ProfileMenuItems/VBoxContainer2/VBoxContainer2/ChangeUsername" to="." method="_on_change_username_pressed"]
[connection signal="pressed" from="CanvasLayer/ProfileMenuItems/VBoxContainer3/ChangeProfilePicture" to="CanvasLayer/ProfileMenuItems" method="_on_change_profile_picture_pressed"]
[connection signal="toggled" from="CanvasLayer/SettingsMenuItems/SettingsBox/MusicSwitch" to="." method="_on_music_switch_toggled"]
[connection signal="toggled" from="CanvasLayer/SettingsMenuItems/SettingsBox/SoundSwitch" to="." method="_on_sound_switch_toggled"]
[connection signal="toggled" from="CanvasLayer/SettingsMenuItems/SettingsBox/AutoSkipRulesSwitch" to="." method="_on_auto_skip_rules_switch_toggled"]
[connection signal="toggled" from="CanvasLayer/SettingsMenuItems/SettingsBox/LowGraphicsSwitch" to="." method="_on_low_graphics_switch_toggled"]
[connection signal="pressed" from="CanvasLayer/SettingsMenuItems/BackButton" to="CanvasLayer/SettingsMenuItems" method="_on_back_button_pressed"]
